--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,22 @@
-.chatbox {
+  .chatbox {
     display: flex;
     justify-content: center;
-    position: absolute;
-    bottom: 80px;
     width: 100%;
   }
   .chat-log {
-    background-color: #000040;
     width: 100%;
-    display: flex;
+    padding: 20px;
     justify-content: center;
+    display: flex;
     flex-direction: column;
-  
-  
   }
   .chat-message {
     display: flex;
-    background-color: #5db8b2;
     width: 80%;
-    border-radius: 10px;
-    margin-bottom: 10px;
+    border-radius: 5px;
     padding: 10px;
-    color:'black'
+    background-color: #5db8b2;
+    color: black;
   }
   .chatgpt {
     color: black;
@@ -29,4 +24,7 @@
     width: 80%;
     border-radius: 10px;
     padding: 10px;
+  }
+  .message {
+    overflow-wrap: anywhere;
   }
